fixed overflow issue when viewing the site at smaller screen widths

--- a/stylesheets/blog.scss
+++ b/stylesheets/blog.scss
@@ -126,6 +126,7 @@ article.col-md-4.blog-column {
 
 section.row.no-padding.culture.blog-posts {
     margin-bottom: 100px;
+    overflow: hidden;
 }
 
 @media all and (max-width:768px) {
